refined header styling

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><button class="hire-button">Hire me</button></li>
             </ul>
         </nav>
         <div class="header-content">
-            <h2>Hi, I'm John Watson</h2>
-            <h1>Web Developer</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio ut veniam laudantium placeat dolore vel. Adipisci sint totam ratione nihil.</p>
-            <div class="header-buttons">
-                <button>Hire Me</button>
-                <button>My Portfolio</button>
+            <div class="intro">
+                <h2>Hi, I'm John Watson</h2>
+                <h1>Web Developer</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio ut veniam laudantium placeat dolore vel. Adipisci sint totam ratione nihil.</p>
+                <div class="intro-buttons">
+                    <button class="hire-button">Hire Me</button>
+                    <button class="portfolio-link">My Portfolio</button>
+                </div>
             </div>
             <img src="Profile-pic-removebg-preview.png" alt="Profile Picture" class="profile-pic">
         </div>
