updating header content

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             </ul>
         </nav>
         <div class="header-content">
-            <h2>Hi, I'm John Watson</h2>
-            <h1>Web Developer</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio ut veniam laudantium placeat dolore vel. Adipisci sint totam ratione nihil.</p>
-            <div class="header-buttons">
-                <button>Hire Me</button>
-                <button>My Portfolio</button>
+            <div class="intro"></div>
+                <h2>Hi, I'm John Watson</h2>
+                <h1>Web Developer</h1>
+                <p>I love Graphic design and Photography and have been working on my portfolio since 2016. I Can give your business a new Creative start right away!</p>
+                <div class="intro-buttons">
+                    <button class="hire-button">Hire Me</button>
+                    <button class="portfolio-link">My Portfolio</button>
+                </div>
             </div>
             <img src="Images/Profile-pic-removebg-preview.png" alt="Profile Picture" class="profile-pic">
         </div>
