updated header with animated text

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><button class="hire-button">Hire me</button></li>
             </ul>
         </nav>
         <div class="header-content">
-            <div class="intro"></div>
+            <div class="intro">
                 <h2>Hi, I'm John Watson</h2>
-                <h1>Web Developer</h1>
+                <h1 id="intro-skill">Web Developer</h1>
                 <p>I love Graphic design and Photography and have been working on my portfolio since 2016. I Can give your business a new Creative start right away!</p>
                 <div class="intro-buttons">
                     <button class="hire-button">Hire Me</button>
@@ -236,5 +237,6 @@
             <a href=""><img src="" alt="Pinterest"></a>
         </div>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
